# tara-final-project

./: .gitignore  first_test-0-1.json  flash-higher-default.csv  flash-nothing.csv  flash-thinking-default.csv  flash-tips-default.csv  master.csv  master_v1_r1.csv  master_v1_r2.csv  master_v2_r1.csv  master_v2_r2.csv  pyproject.toml  qwen-default.csv  real_test-0-0.json  sonnet4-tips-default.csv  test-0-0.json  test-1-1.json  unlucky-0-0.json
agent/: main.py  playground.py  prompt_agent.py  world.py  writer.py
agent/prompts/: system_prompt.md  system_prompt_v2.md  system_prompt_v3.md  system_prompt_v4.md
analysis/: analysis.py  main.ipynb  processed_data.csv  visualiser.py
analysis/data/: default_41mini.csv  default_deepseek.csv  default_flash.csv  default_r1.csv  default_sonnet4.csv  high_flash.csv  human_sonnet4.csv  tips_sonnet4.csv
examples/: human.py
results/: 41-v1-find-living-thing.json  41-v1-find-non-living-thing-0-0.json  41-v1-find-non-living-thing.json  41mini-v1-boil-0-0.json  41mini-v1-change-the-state-of-matter-of-0-0.json  41mini-v1-chemistry-mix-0-0.json  41mini-v1-chemistry-mix-paint-secondary-color-0-0.json  41mini-v1-chemistry-mix-paint-tertiary-color-0-0.json  41mini-v1-find-animal-0-0.json  41mini-v1-find-living-thing-0-0.json  41mini-v1-find-non-living-thing-0-0.json  41mini-v1-find-plant-0-0.json  41mini-v1-freeze-0-0.json  41mini-v1-grow-fruit-0-0.json  41mini-v1-grow-plant-0-0.json  41mini-v1-identify-life-stages-1-0-0.json  41mini-v1-identify-life-stages-2-0-0.json  41mini-v1-inclined-plane-determine-angle-0-0.json  41mini-v1-inclined-plane-friction-named-surfaces-0-0.json  41mini-v1-inclined-plane-friction-unnamed-surfaces-0-0.json  41mini-v1-lifespan-longest-lived-0-0.json  41mini-v1-lifespan-longest-lived-then-shortest-lived-0-0.json  41mini-v1-lifespan-shortest-lived-0-0.json  41mini-v1-measure-melting-point-known-substance-0-0.json  41mini-v1-measure-melting-point-unknown-substance-0-0.json  41mini-v1-melt-0-0.json  41mini-v1-mendelian-genetics-known-plant-0-0.json  41mini-v1-mendelian-genetics-unknown-plant-0-0.json  41mini-v1-power-component-0-0.json  41mini-v1-power-component-renewable-vs-nonrenewable-energy-0-0.json  41mini-v1-test-conductivity-0-0.json  41mini-v1-test-conductivity-of-unknown-substances-0-0.json  41mini-v1-use-thermometer-0-0.json  deepseek-test-boil-0-0.json  deepseek-test-change-the-state-of-matter-of-0-0.json  flash-high-boil-0-0.json  flash-high-boil.json  flash-high-change-the-state-of-matter-of-0-0.json  flash-high-change-the-state-of-matter-of.json  flash-high-chemistry-mix-0-0.json  (+618 more)
scienceworld/: __init__.py  scienceworld.py
